# vlc-htsp-plugin

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.am  Makefile.old  README  README.md  access.cpp  bootstrap  configure.ac  discovery.cpp  helper.cpp
cmake/: FindLIBVLC.cmake
contribs/osx/: 2.2.0.tar.bz2
osx/: README.txt
src/: helper.h
vlc_deps/osx/: 2.2.4.tar.bz2
